--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 body{
-    background-color: rgb(54, 53, 52);
+    background-color: rgba(2, 6, 24, 1);
     font-family: 'Montserrat', 'sans-serif';
     font-size: large;
 }
