--- a/src/movies/moviePage.css
+++ b/src/movies/moviePage.css
@@ -3,12 +3,14 @@ h1{
 }
 .moviepage
 {
-    /* background-color: rgb(55, 35, 35); */
-    background-image: url('../assets/back.png');
-    background-size: cover;
-    background-repeat: repeat;
-    width: auto;
-    height: 65vh;
+  position: absolute; /* Абсолютно позиционируем фон */
+  top: 13%;
+  left: 0;
+  width: 100%;
+  height: 75%;
+  background-size: cover;
+  background-position: center;
+  z-index: -1; /* Помещаем фон под остальной контент */
 }
 
 .desc_and_logo
@@ -16,9 +18,9 @@ h1{
     display: flex;
     justify-content: end;
     position: relative;
-    top: 40%;
-    border: 1px solid transparent;
-    height: 45%;
+    top: 10rem;
+    /* border: 1px solid red; */
+    height: 25rem;
     width: auto;
 }
 .posterLogo
@@ -27,13 +29,16 @@ h1{
     float: right;
     height: 100%;
     width: auto;
+    border-radius: 19px;
+    /* border: 1px solid yellow; */
 }
 .descrptn
 {
-    display: block;
-    border: 1px solid transparent;
+    /* display: block; */
+    /* border: 1px solid green; */
     height: 50%;
     margin-top: 5%;
+    margin-right: 2rem;
     width: auto;
     /* color: rgb(41, 43, 46); */
 }
@@ -41,15 +46,16 @@ h1{
 {
     display: flex;
     justify-content: end;
-    margin-right: 15%;
+    /* margin-right: 1rem; */
     color:aliceblue;
     font-size: x-large;
     font-weight: bold;
 }
 .descData
 {
-    margin-right: 15%;
-    /* color: rgba(69, 85, 108, 1); */
+    display: flex;
+    justify-content: end;
+    /* margin-right: 1rem; */
     color: white;
 }
 
@@ -59,14 +65,18 @@ h1{
     margin-left: 5px;
     margin-right: 5px;
     border-radius: 16px;
+    min-width: 6rem;
+    min-height: 1.5rem;
 }
 .button2
 {
 
-    background-color:rgba(190, 219, 255, 1);
+    background-color: rgba(25, 60, 184, 1);
     margin-left: 5px;
     margin-right: 5px;
     border-radius: 16px;
+    min-width: 6rem;
+    min-height: 1.5rem;
 }
 .button3
 {
@@ -74,11 +84,23 @@ h1{
     margin-left: 5px;
     margin-right: 5px;
     border-radius: 16px;
+    min-width: 6rem;
+    min-height: 1.5rem;
+}
+.button3
+{
+    background-color:rgba(190, 219, 255, 1);
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 16px;
+    min-width: 6rem;
+    min-height: 1.5rem;
 }
 .buttons
 {
     display: flex;
     justify-content: space-around;
-    margin-top: 5%;
-    border: 1px solid transparent;
+    align-items: end;
+    margin-top: 5rem;
+    /* border: 1px solid teal; */
 }
