--- a/src/movies/moviePage.css
+++ b/src/movies/moviePage.css
@@ -58,6 +58,17 @@ h1{
     /* margin-right: 1rem; */
     color: white;
 }
+.descDescr
+{
+    width: auto;
+    height: 10rem;
+    /* border: 1px solid red; */
+    /* display: block; */
+    /* justify-content: start; */
+    /* white-space: nowrap; */
+    overflow: hidden;
+    /* text-overflow: ellipsis; */
+}
 
 .button1
 {
@@ -65,42 +76,36 @@ h1{
     margin-left: 5px;
     margin-right: 5px;
     border-radius: 16px;
+    border-radius: 16px;
     min-width: 6rem;
+    max-width: 3rem;
     min-height: 1.5rem;
 }
 .button2
 {
-
-    background-color: rgba(25, 60, 184, 1);
+    background-color:rgba(190, 219, 255, 1);
     margin-left: 5px;
     margin-right: 5px;
     border-radius: 16px;
     min-width: 6rem;
+    max-width: 3rem;
     min-height: 1.5rem;
 }
-.button3
+.buttonFvrt
 {
     background-color:rgba(190, 219, 255, 1);
     margin-left: 5px;
     margin-right: 5px;
     border-radius: 16px;
     min-width: 6rem;
-    min-height: 1.5rem;
-}
-.button3
-{
-    background-color:rgba(190, 219, 255, 1);
-    margin-left: 5px;
-    margin-right: 5px;
-    border-radius: 16px;
-    min-width: 6rem;
+    max-width: 3rem;
     min-height: 1.5rem;
 }
 .buttons
 {
     display: flex;
-    justify-content: space-around;
-    align-items: end;
-    margin-top: 5rem;
+    justify-content: end;
+    gap: 1rem;
+    margin-top: -1.5rem;
     /* border: 1px solid teal; */
 }
