--- a/src/header/header.css
+++ b/src/header/header.css
@@ -3,7 +3,7 @@
 .header
 {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 5rem;
@@ -18,19 +18,29 @@
 {
     color: rgb(88, 176, 138);
 }
+.headLogoTitle
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 15%;
+}
 .searchBlock
 {
-    position: absolute;
-    right: 11%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .searchField{
+    display: flex;
     /* position: absolute;
     right: 15%; */
-    margin-left: 5rem;
+    /* margin-left: 5rem; */
     background-color: transparent;
     border-radius: 19px;
     height: 2rem;
     max-width: 100%;
+    min-width: 1rem;
     color: aliceblue;
 }
 input{
@@ -43,9 +53,22 @@ input{
     height: 2rem;
     width: auto;
 }
-.buttonFavMovie{
-    position: absolute;
-    right: 5%;
+.buttonRandomMovie
+{
+    /* position: absolute;
+    right: 10%; */
+    border-radius: 19px;
+    /* border: 1px solid red; */
+    color: aliceblue;
+    background-color: transparent;
+    height: 2.5rem;
+    width: 7rem;
+    /* margin-left: 5rem; */
+}
+.buttonFavMovie
+{
+    /* position: absolute;
+    right: 2%; */
     border-radius: 19px;
     /* border: 1px solid red; */
     color: aliceblue;
@@ -53,5 +76,5 @@ input{
     height: 2.5rem;
     width: auto;
     /* margin-left: 5rem; */
-
+    margin-right: 15%;
 }
